[package]
name = "evaasio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
anyhow = "1"
regex = "1"
unicode-normalization = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
dotenvy = "0.15"
url = "2"
once_cell = "1"

[[bin]]
name = "gen_jwt"
path = "scripts/gen_jwt.rs"
